# cypherush

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md  server_address.txt.example
client/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  main.cpp
client/resources/: icons.qrc
client/services/: AuthenticationService.cpp  AuthenticationService.h  MessagingService.cpp  MessagingService.h  ServerConfig.cpp  ServerConfig.h
client/ui/: LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainChatWindow.cpp  MainChatWindow.h  MainChatWindow.ui  SplashScreen.cpp  SplashScreen.h
common/: CMakeLists.txt
common/crypto/: AESEncryptor.cpp  AESEncryptor.h  HybridEncryptor.cpp  HybridEncryptor.h  IEncryptor.h  KeyManager.cpp  KeyManager.h  PasswordHasher.cpp  PasswordHasher.h  RSAEncryptor.cpp  RSAEncryptor.h
common/data/: EncryptedFileStorage.cpp  EncryptedFileStorage.h  IRepository.h  MessageRepository.cpp  MessageRepository.h  UserRepository.cpp  UserRepository.h
common/exceptions/: AppExceptions.h
common/models/: Contact.cpp  Contact.h  KeyPair.cpp  KeyPair.h  Message.cpp  Message.h  User.cpp  User.h
common/network/: MessageProtocol.cpp  MessageProtocol.h  NetworkMessage.cpp  NetworkMessage.h
installer/: Cypherush.iss  README.md  build_installer.ps1
server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
